chore: replace all System.getProperty usage with Project.providers.systemProperty (#495)
* chore: replace all System.getProperty usage with Project.providers.systemProperty

* fix: compile

* fix: fix compile

* fix: don't capture transformer

* Update gradle-plugin-core/src/main/java/wtf/emulator/setup/ProviderUtils.java

Co-authored-by: Copilot <175728472+Copilot@users.noreply.github.com>

* chore: remove unused imports

---------

Co-authored-by: Copilot <175728472+Copilot@users.noreply.github.com>